@@ -1,3 +1,7 @@
+2005-12-19  Sam Steingold  <sds@gnu.org>
+
+	* stream.d (find_open_file): fix compilation with gcc4
+
 2005-12-18  Sam Steingold  <sds@gnu.org>
 
 	base check_file_re_open() on unique file ID, not truenames that
